--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,7 +5,7 @@ name: Python package
 
 on:
   schedule:
-    - cron: '* * * * *'
+    - cron: '0 21 * * *'
   push:
     branches: [ main ]
   pull_request:
@@ -37,6 +37,6 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
-      run: |
-        pytest
-        python ClockIn.py
+      run: python ClockIn.py
+
+        
