--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,4 +28,4 @@ jobs:
     - name: Install dependencies
       run: pip install requests
     - name: Test with pytest
-      run: python ClockIn.py ${{PHONE}} ${{PASSWORD}} ${{NAME}} ${{ID_CARD}} ${{COLLEGE}} ${{PROFESSION}} ${{CLASS}} ${{STUDENT_ID}} ${{ADDRESS}} ${{LAT}} ${{LNG}} ${{DISTRICT}} ${{DEVICETOKEN}} ${{SCKEY}}
+      run: python ClockIn.py ${{secrets.PHONE}} ${{secrets.PASSWORD}} ${{secrets.NAME}} ${{secrets.ID_CARD}} ${{secrets.COLLEGE}} ${{secrets.PROFESSION}} ${{secrets.CLASS}} ${{secrets.STUDENT_ID}} ${{secrets.ADDRESS}} ${{secrets.LAT}} ${{secrets.LNG}} ${{secrets.DISTRICT}} ${{secrets.DEVICETOKEN}} ${{secrets.SCKEY}}
