--- a/.github/workflows/autoClickIn.yml
+++ b/.github/workflows/autoClickIn.yml
@@ -1,11 +1,11 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python package
+name: autoClickIn
 
 on:
   schedule:
-    - cron: '0 21 * * *'
+    - cron: '0 17 * * *'
   push:
     branches: [ main ]
   pull_request:
