--- a/.github/workflows/autoClockIn.yml
+++ b/.github/workflows/autoClockIn.yml
@@ -1,12 +1,12 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: autoClickIn
+name: autoClockIn
 
 on:
   schedule:
     - cron: '0 17 * * *'
-    - cron: '0 14 * * *'
+    - cron: '30 14 * * *'
   push:
     branches: [ main ]
   pull_request:
