--- a/.github/workflows/autoClockIn.yml
+++ b/.github/workflows/autoClockIn.yml
@@ -6,8 +6,7 @@ name: autoClockIn
 on:
   schedule:
     - cron: '10 21 * * *'
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build:
