--- a/.github/workflows/autoClockIn.yml
+++ b/.github/workflows/autoClockIn.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Install dependencies
       run: pip install requests
     - name: Run pyshell
-      run: python ClockIn.py ${{secrets.PHONE}} ${{secrets.PASSWORD}} ${{secrets.NAME}} ${{secrets.ID_CARD}} ${{secrets.COLLEGE}} ${{secrets.PROFESSION}} ${{secrets.CLASS}} ${{secrets.STUDENT_ID}} ${{secrets.ADDRESS}} ${{secrets.LAT}} ${{secrets.LNG}} ${{secrets.DISTRICT}} ${{secrets.DEVICETOKEN}} ${{secrets.SCKEY}}
+      run: python ClockIn.py ${{secrets.PHONE}} ${{secrets.PASSWORD}} ${{secrets.ADDRESS}} ${{secrets.LAT}} ${{secrets.LNG}} ${{secrets.DISTRICT}} ${{secrets.DEVICETOKEN}} ${{secrets.SCKEY}}
